--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,14 @@
 {
-    "python.pythonPath": "/home/pascalwhoop/.virtualenvs/tmp/bin/python"
+    "python.pythonPath": "/home/pascalwhoop/.virtualenvs/tmp/bin/python",
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./reader",
+        "-p",
+        "test_*.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.unittestEnabled": true,
+    "python.linting.enabled": true
 }
